@@ -9,6 +9,9 @@
 #ifndef _VECTOR_HPP_
 #define _VECTOR_HPP_
 
+//#define NDEBUG
+#include <Eigen/Dense>
+
 #if USE_DOUBLE
     #define FLOATING_TYPE double
 #else
@@ -16,19 +19,107 @@
 #endif
 typedef FLOATING_TYPE Scalar;
 
-#if USE_EIGEN_LIBRARY
-    //#define NDEBUG
-    #include <Eigen/Dense>
-    typedef Eigen::Matrix<Scalar, 1, 1> Vector1;
-    typedef Eigen::Matrix<Scalar, 2, 1> Vector2;
-    typedef Eigen::Matrix<Scalar, 3, 1> Vector3;
-    typedef Eigen::Matrix<Scalar, 4, 1> Vector4;
-#else
-    #include "VectorLib.hpp"
-    typedef LibVector<Scalar, 1> Vector1;
-    typedef LibVector<Scalar, 2> Vector2;
-    typedef LibVector<Scalar, 3> Vector3;
-    typedef LibVector<Scalar, 4> Vector4;
-#endif
+/** Vector proxy class forwarding to Eigen. */
+class Vector3
+{
+private:
+    typedef Eigen::Matrix<Scalar, 3, 1> EigenVector3;
+    EigenVector3 eigenVector;
+
+public:
+    Vector3()
+        :eigenVector(0, 0, 0)
+    {
+    }
+    Vector3(Scalar x, Scalar y, Scalar z)
+        :eigenVector(x, y, z)
+    {
+    }
+    Vector3(Vector3&& v)
+        :eigenVector(std::move(v.eigenVector))
+    {
+    }
+    Vector3(const Vector3& v)
+        :eigenVector(v.eigenVector)
+    {
+    }
+    explicit Vector3(const EigenVector3& v)
+        :eigenVector(v)
+    {
+    }
+    Vector3& operator=(const Vector3& v)
+    {
+        eigenVector = v.eigenVector;
+        return *this;
+    }
+
+    ~Vector3()
+    {
+    }
+
+    Scalar& operator()(unsigned char index)
+    {
+        return eigenVector(index);
+    }
+    const Scalar& operator()(unsigned char index) const
+    {
+        return eigenVector(index);
+    }
+    bool operator==(const Vector3& v) const
+    {
+        return eigenVector == v.eigenVector;
+    }
+
+    Scalar norm() const
+    {
+        return eigenVector.norm();
+    }
+    Scalar squaredNorm() const
+    {
+        return eigenVector.squaredNorm();
+    }
+    Scalar dot(const Vector3& v) const
+    {
+        return eigenVector.dot(v.eigenVector);
+    }
+    void setZero()
+    {
+        eigenVector.setZero();
+    }
+
+    Vector3 operator*(Scalar s) const
+    {
+        return Vector3(eigenVector*s);
+    }
+    Vector3 operator/(Scalar s) const
+    {
+        return Vector3(eigenVector/s);
+    }
+    Vector3 operator+(Vector3 v) const
+    {
+        return Vector3(eigenVector+v.eigenVector);
+    }
+    Vector3 operator-(Vector3 v) const
+    {
+        return Vector3(eigenVector-v.eigenVector);
+    }
+
+    void operator*=(Scalar s)
+    {
+        eigenVector *= s;
+    }
+    void operator/=(Scalar s)
+    {
+        eigenVector /= s;
+    }
+    void operator+=(Vector3 v)
+    {
+        eigenVector += v.eigenVector;
+    }
+    void operator-=(Vector3 v)
+    {
+        eigenVector -= v.eigenVector;
+    }
+};
 
 #endif
